--- a/Mnews.html
+++ b/Mnews.html
@@ -226,7 +226,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
         </div>
         <div class="author-details-icon"data-aos="fade-up" data-aos-duration="1000">
           <a href="your_link_here">
-            <i class="fas fa-angle-right"></i>
+            <i class="fa-solid fa-file-arrow-down arrow-down-magazine"></i>
         </a> 
         </div>
       </div>
@@ -252,7 +252,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
         </div>
         <div class="author-details-icon"data-aos="fade-up" data-aos-duration="1000">
           <a href="your_link_here">
-            <i class="fas fa-angle-right"></i>
+            <i class="fa-solid fa-file-arrow-down arrow-down-magazine"></i>
         </a> 
         </div>
       </div>
@@ -278,7 +278,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
         </div>
         <div class="author-details-icon"data-aos="fade-up" data-aos-duration="1000">
           <a href="your_link_here">
-            <i class="fas fa-angle-right"></i>
+            <i class="fa-solid fa-file-arrow-down arrow-down-magazine"></i>
         </a> 
         </div>
       </div>
@@ -304,7 +304,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
         </div>
         <div class="author-details-icon"data-aos="fade-up" data-aos-duration="1000">
           <a href="your_link_here">
-            <i class="fas fa-angle-right"></i>
+            <i class="fa-solid fa-file-arrow-down arrow-down-magazine"></i>
         </a> 
         </div>
       </div>
@@ -330,7 +330,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
         </div>
         <div class="author-details-icon"data-aos="fade-up" data-aos-duration="1000">
           <a href="your_link_here">
-            <i class="fas fa-angle-right"></i>
+            <i class="fa-solid fa-file-arrow-down arrow-down-magazine"></i>
         </a> 
         </div>
       </div>
@@ -356,7 +356,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
         </div>
         <div class="author-details-icon" data-aos="fade-up" data-aos-duration="1000">
           <a href="your_link_here">
-            <i class="fas fa-angle-right"></i>
+            <i class="fa-solid fa-file-arrow-down arrow-down-magazine"></i>
         </a>        
         </div>
       </div>
