--- a/article.html
+++ b/article.html
@@ -227,6 +227,32 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 </div>
 
 
+
+<div class="container-fluid p-100">
+  <div class="pagination-container mt-4">
+    <nav aria-label="Page navigation" class="w-100">
+      <ul class="pagination justify-content-between mx-auto" >
+        <li class="page-item previous">
+          <a class="page-link" href="#" aria-label="Previous">
+            <span aria-hidden="true"><i class="fa-solid fa-arrow-left"></i></span>
+            <span class="pagination-word-left left" disabled>Previous</span>
+          </a>
+        </li>
+
+        <li class="page-item next">
+          <a class="page-link" href="#" aria-label="Next">
+            <span aria-hidden="true"></span>
+            <span class="pagination-word-right right active">Next</span>
+            <i class="fa-solid fa-arrow-right "></i>
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+</div>
+
+
+
 <!-- Vertical line -->
 <div class="verticle-line-news mt-2" ></div>
 
@@ -276,6 +302,9 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
           </div>
           <!-- End of ready-online section -->
       </div>
+
+
+
 
 
 
