--- a/index.html
+++ b/index.html
@@ -285,118 +285,165 @@
   </div>
 </div>
 
-    <div class="container-fluid p-100">
-      <div class="recharge-bill ">
-        <div class="row">
-          <!-- Slider Column -->
-          <div class="col-lg-6">
-            <div class="bill-payment-slider">
-              <!-- Slide 1 Content -->
-              <div class="recharge-bill-left ">
-                <h2 data-aos="fade-up" data-aos-duration="1000">Recharge & Bill Payments</h2>
-                <p data-aos="fade-up" data-aos-duration="1000">We Make <span>Secure, Seamless & Frictionless
-                    Payments</span> An Everyday Convenience.</p>
-                <p class="recharge-bill-paragraph" data-aos="fade-up" data-aos-duration="1000">We help businesses grow
-                  their brands and attract more customers while <br> empower individuals to lead a hassle-free,
-                  time-saving and limitless state-of- <br>living through a wide range of financial platforms, products &
-                  services.</p>
-                <div class="btn-group mt-5" data-aos="fade-up" data-aos-duration="1000">
-                  <div class="btn-wrapper">
-                    <button type="button" class="btn become-partner" data-bs-toggle="modal"
-                      data-bs-target="#contactFormModal">Become A Partner</button>
-                  </div>
 
-                  <div class="btn-wrapper">
-                    <button type="button" class="btn contact-us">Contact Us</button>
-                  </div>
-                </div>
-                <div class="stars mt-4" data-aos="fade-up" data-aos-duration="1000">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <span class="star-rating ml-2">Rated 5/5 -<span class="normal-text"> from over 40
-                      reviews</span></span>
-                </div>
+
+<div class="container-fluid p-100">
+  <!-- Slider Container -->
+  <div class="recharge-bill bill-payment-slider ">
+    <!-- Slide 1 -->
+    <div>
+      <div class="row">
+        <div class="col-lg-6">
+          <!-- Slide 1 Content -->
+          <div class="recharge-bill-left">
+            <h2 data-aos="fade-up" data-aos-duration="1000">Recharge & Bill Payments</h2>
+            <p data-aos="fade-up" data-aos-duration="1000">We Make <span>Secure, Seamless & Frictionless
+                Payments</span> An Everyday Convenience.</p>
+            <p class="recharge-bill-paragraph" data-aos="fade-up" data-aos-duration="1000">We help businesses grow
+              their brands and attract more customers while <br> empower individuals to lead a hassle-free,
+              time-saving and limitless state-of- <br>living through a wide range of financial platforms, products &
+              services.</p>
+            <div class="btn-group mt-5" data-aos="fade-up" data-aos-duration="1000">
+              <div class="btn-wrapper">
+                <button type="button" class="btn become-partner">Become A Partner</button>
               </div>
-              <!-- Slide 2 Content -->
-              <div class="recharge-bill-left ">
-                <h2 data-aos="fade-up" data-aos-duration="1000">Recharge & Bill Payments</h2>
-                <p data-aos="fade-up" data-aos-duration="1000">We Make <span>Secure, Seamless & Frictionless
-                    Payments</span> An Everyday Convenience.</p>
-                <p class="recharge-bill-paragraph" data-aos="fade-up" data-aos-duration="1000">We help businesses grow
-                  their brands and attract more customers while <br> empower individuals to lead a hassle-free,
-                  time-saving and limitless state-of- <br>living through a wide range of financial platforms, products &
-                  services.</p>
-                <div class="btn-group mt-5" data-aos="fade-up" data-aos-duration="1000">
-                  <div class="btn-wrapper">
-                    <button type="button" class="btn become-partner">Become A Partner</button>
-                  </div>
-                  <div class="btn-wrapper">
-                    <button type="button" class="btn contact-us">Contact Us</button>
-                  </div>
-                </div>
-                <div class="stars mt-4" data-aos="fade-up" data-aos-duration="1000">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <span class="star-rating ml-2" style="font-size: 16px;">Rated 5/5 -<span class="normal-text"> from
-                      over 40 reviews</span></span>
-                </div>
-              </div>
-              <!-- Slide 3 Content -->
-              <div class="recharge-bill-left">
-                <h2 data-aos="fade-up" data-aos-duration="1000">Recharge & Bill Payments</h2>
-                <p data-aos="fade-up" data-aos-duration="1000">We Make <span>Secure, Seamless & Frictionless
-                    Payments</span> An Everyday Convenience.</p>
-                <p class="recharge-bill-paragraph" data-aos="fade-up" data-aos-duration="1000">We help businesses grow
-                  their brands and attract more customers while <br> empower individuals to lead a hassle-free,
-                  time-saving and limitless state-of- <br>living through a wide range of financial platforms, products &
-                  services.</p>
-                <div class="btn-group mt-5" data-aos="fade-up" data-aos-duration="1000">
-                  <div class="btn-wrapper">
-                    <button type="button" class="btn become-partner">Become A Partner</button>
-                  </div>
-                  <div class="btn-wrapper">
-                    <button type="button" class="btn contact-us">Contact Us</button>
-                  </div>
-                </div>
-                <div class="stars mt-4" data-aos="fade-up" data-aos-duration="1000">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <span class="star-rating ml-2" style="font-size: 16px;">Rated 5/5 -<span class="normal-text"> from
-                      over 40 reviews</span></span>
-                </div>
+              <div class="btn-wrapper">
+                <button type="button" class="btn contact-us">Contact Us</button>
               </div>
             </div>
-          </div>
-
-          <!-- Image Column -->
-
-          <div class="col-lg-6 grow-your-presence ">
-            <div class="images-section">
-              <img src="assets/images/Image wrapper.png" alt="Background Image" class="bg-image">
-              <img src="assets/images/pretty-florist-apron-working-with-flowers-while-dreamily-looking-camera-big-greenhouse-PhotoRoom 1.png"
-                data-aos="fade-down-left" data-aos-duration="1000" alt="Image 2" class="mobile-img">
-              <img src="assets/images/sec1-3.PNG" data-aos="fade-down-right" data-aos-duration="1000" alt="Image 3"
-                class="grow-img">
-              <img src="assets/images/Capture.PNG" data-aos="fade-down-right" data-aos-duration="1000" alt="Image 4"
-                class="receive-img">
+            <div class="stars mt-4" data-aos="fade-up" data-aos-duration="1000">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <span class="star-rating ml-2" style="font-size: 16px;">Rated 5/5 -<span class="normal-text"> from
+                  over 40 reviews</span></span>
             </div>
           </div>
-          <div class="col-lg-6 grow-your-presence-mobile">
-            <img src="assets/images/right-bg.PNG" alt="Image Description" data-aos="fade-up" data-aos-duration="1000"
-              class="img-fluid recharge-bill-right-img mt-3">
+        </div>
+        <div class="col-lg-6 grow-your-presence">
+          <div class="images-section ">
+            <img src="assets/images/Image wrapper.png" alt="Background Image" class="bg-image">
+            <img src="assets/images/pretty-florist-apron-working-with-flowers-while-dreamily-looking-camera-big-greenhouse-PhotoRoom 1.png"
+              data-aos="fade-down-left" data-aos-duration="1000" alt="Image 2" class="mobile-img">
+            <img src="assets/images/sec1-3.PNG" data-aos="fade-down-right" data-aos-duration="1000" alt="Image 3"
+              class="grow-img">
+            <img src="assets/images/Capture.PNG" data-aos="fade-down-right" data-aos-duration="1000" alt="Image 4"
+              class="receive-img">
           </div>
+        </div>
+        <div class="col-lg-6 grow-your-presence-mobile">
+          <img src="assets/images/right-bg.PNG" alt="Image Description" data-aos="fade-up" data-aos-duration="1000"
+            class="img-fluid recharge-bill-right-img mt-3">
+      </div>
+    </div>
+    </div>
+    <!-- End of Slide 1 -->
+
+    <!-- Slide 2 (Add more slides here if needed) -->
+    <div>
+      <div class="row">
+        <div class="col-lg-6">
+          <!-- Slide 1 Content -->
+          <div class="recharge-bill-left">
+            <h2 data-aos="fade-up" data-aos-duration="1000">Recharge & Bill Payments</h2>
+            <p data-aos="fade-up" data-aos-duration="1000">We Make <span>Secure, Seamless & Frictionless
+                Payments</span> An Everyday Convenience.</p>
+            <p class="recharge-bill-paragraph" data-aos="fade-up" data-aos-duration="1000">We help businesses grow
+              their brands and attract more customers while <br> empower individuals to lead a hassle-free,
+              time-saving and limitless state-of- <br>living through a wide range of financial platforms, products &
+              services.</p>
+            <div class="btn-group mt-5" data-aos="fade-up" data-aos-duration="1000">
+              <div class="btn-wrapper">
+                <button type="button" class="btn become-partner">Become A Partner</button>
+              </div>
+              <div class="btn-wrapper">
+                <button type="button" class="btn contact-us">Contact Us</button>
+              </div>
+            </div>
+            <div class="stars mt-4" data-aos="fade-up" data-aos-duration="1000">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <span class="star-rating ml-2" style="font-size: 16px;">Rated 5/5 -<span class="normal-text"> from
+                  over 40 reviews</span></span>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 grow-your-presence ">
+          <div class="images-section">
+            <img src="assets/images/Image wrapper.png" alt="Background Image" class="bg-image">
+            <img src="assets/images/pretty-florist-apron-working-with-flowers-while-dreamily-looking-camera-big-greenhouse-PhotoRoom 1.png"
+              data-aos="fade-down-left" data-aos-duration="1000" alt="Image 2" class="mobile-img">
+            <img src="assets/images/sec1-3.PNG" data-aos="fade-down-right" data-aos-duration="1000" alt="Image 3"
+              class="grow-img">
+            <img src="assets/images/Capture.PNG" data-aos="fade-down-right" data-aos-duration="1000" alt="Image 4"
+              class="receive-img">
+          </div>
+        </div>
+         <div class="col-lg-6 grow-your-presence-mobile">
+      <img src="assets/images/right-bg.PNG" alt="Image Description" data-aos="fade-up" data-aos-duration="1000"
+        class="img-fluid recharge-bill-right-img mt-3">
+    </div>
+      </div>
+    </div>
+    <!-- End of Slide 2 -->
+<!-- Slide 2 (Add more slides here if needed) -->
+<div>
+  <div class="row">
+    <div class="col-lg-6">
+      <!-- Slide 1 Content -->
+      <div class="recharge-bill-left">
+        <h2 data-aos="fade-up" data-aos-duration="1000">Recharge & Bill Payments</h2>
+        <p data-aos="fade-up" data-aos-duration="1000">We Make <span>Secure, Seamless & Frictionless
+            Payments <br></span> An Everyday Convenience.</p>
+        <p class="recharge-bill-paragraph" data-aos="fade-up" data-aos-duration="1000">We help businesses grow
+          their brands and attract more customers while <br> empower individuals to lead a hassle-free,
+          time-saving and limitless state-of- <br>living through a wide range of financial platforms, products &
+          services.</p>
+        <div class="btn-group mt-5" data-aos="fade-up" data-aos-duration="1000">
+          <div class="btn-wrapper">
+            <button type="button" class="btn become-partner">Become A Partner</button>
+          </div>
+          <div class="btn-wrapper">
+            <button type="button" class="btn contact-us">Contact Us</button>
+          </div>
+        </div>
+        <div class="stars mt-4" data-aos="fade-up" data-aos-duration="1000">
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <span class="star-rating ml-2" style="font-size: 16px;">Rated 5/5 -<span class="normal-text"> from
+              over 40 reviews</span></span>
         </div>
       </div>
     </div>
+    <div class="col-lg-6 grow-your-presence ">
+      <div class="images-section">
+        <img src="assets/images/Image wrapper.png" alt="Background Image" class="bg-image">
+        <img src="assets/images/pretty-florist-apron-working-with-flowers-while-dreamily-looking-camera-big-greenhouse-PhotoRoom 1.png"
+          data-aos="fade-down-left" data-aos-duration="1000" alt="Image 2" class="mobile-img">
+        <img src="assets/images/sec1-3.PNG" data-aos="fade-down-right" data-aos-duration="1000" alt="Image 3"
+          class="grow-img">
+        <img src="assets/images/Capture.PNG" data-aos="fade-down-right" data-aos-duration="1000" alt="Image 4"
+          class="receive-img">
+      </div>
+    </div>
+    <div class="col-lg-6 grow-your-presence-mobile">
+      <img src="assets/images/right-bg.PNG" alt="Image Description" data-aos="fade-up" data-aos-duration="1000"
+        class="img-fluid recharge-bill-right-img mt-3">
+    </div>
+  </div>
+</div>
+  </div>
+  <!-- End of Slider Container -->
+</div>
+
 
 
 
@@ -891,9 +938,6 @@
               <p data-aos="fade-up" data-aos-duration="500" data-aos-offset="10"><a href="#">Policy | Cookies</a></p>
             </div>
           </div>
-
-
-
           <div class="row">
             <div class="footer-line2 mb-3"></div>
             <div class="col-md-12 developedby">
@@ -958,7 +1002,8 @@
       </div>
 
 
-      <div id="preloader"></div>
+     <div id="preloader">
+        <img src="assets/images/loader.gif" alt="Loader Image"> </div>
       <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
           class="fa-solid fa-arrow-up"></i></a>
 
