--- a/Mnews.html
+++ b/Mnews.html
@@ -226,12 +226,14 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
         </div>
         <div class="author-details-icon"data-aos="fade-up" data-aos-duration="1000">
           <a href="your_link_here">
-            <i class="fa-solid fa-file-arrow-down arrow-down-magazine"></i>
+            <i class="fa-solid fa-angle-right arrow-right-news"></i>
         </a> 
         </div>
       </div>
     </div>
 
+   
+    
     <!-- New Item 2 -->
     <div class="col-md-4 last-news-imgs mt-4">
       <div class="news-item">
@@ -252,7 +254,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
         </div>
         <div class="author-details-icon"data-aos="fade-up" data-aos-duration="1000">
           <a href="your_link_here">
-            <i class="fa-solid fa-file-arrow-down arrow-down-magazine"></i>
+          <i class="fa-solid fa-angle-right arrow-right-news"></i>
         </a> 
         </div>
       </div>
@@ -278,7 +280,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
         </div>
         <div class="author-details-icon"data-aos="fade-up" data-aos-duration="1000">
           <a href="your_link_here">
-            <i class="fa-solid fa-file-arrow-down arrow-down-magazine"></i>
+            <i class="fa-solid fa-angle-right arrow-right-news"></i>
         </a> 
         </div>
       </div>
@@ -304,7 +306,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
         </div>
         <div class="author-details-icon"data-aos="fade-up" data-aos-duration="1000">
           <a href="your_link_here">
-            <i class="fa-solid fa-file-arrow-down arrow-down-magazine"></i>
+            <i class="fa-solid fa-angle-right arrow-right-news"></i>
         </a> 
         </div>
       </div>
@@ -330,7 +332,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
         </div>
         <div class="author-details-icon"data-aos="fade-up" data-aos-duration="1000">
           <a href="your_link_here">
-            <i class="fa-solid fa-file-arrow-down arrow-down-magazine"></i>
+            <i class="fa-solid fa-angle-right arrow-right-news"></i>
         </a> 
         </div>
       </div>
@@ -356,7 +358,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
         </div>
         <div class="author-details-icon" data-aos="fade-up" data-aos-duration="1000">
           <a href="your_link_here">
-            <i class="fa-solid fa-file-arrow-down arrow-down-magazine"></i>
+            <i class="fa-solid fa-angle-right arrow-right-news"></i>
         </a>        
         </div>
       </div>
