--- a/index.html
+++ b/index.html
@@ -337,8 +337,9 @@
           <img src="assets/images/right-bg.PNG" alt="Image Description" data-aos="fade-up" data-aos-duration="1000"
             class="img-fluid recharge-bill-right-img mt-3">
       </div>
+     </div>
     </div>
-    </div>
+    
     <!-- End of Slide 1 -->
 
     <!-- Slide 2 (Add more slides here if needed) -->
@@ -377,15 +378,15 @@
           <div class="images-section">
             <img src="assets/images/Image wrapper.png" alt="Background Image" class="bg-image">
             <img src="assets/images/pretty-florist-apron-working-with-flowers-while-dreamily-looking-camera-big-greenhouse-PhotoRoom 1.png"
-              data-aos="fade-down-left" data-aos-duration="1000" alt="Image 2" class="mobile-img">
-            <img src="assets/images/sec1-3.PNG" data-aos="fade-down-right" data-aos-duration="1000" alt="Image 3"
+              alt="Image 2" class="mobile-img">
+            <img src="assets/images/sec1-3.PNG"  alt="Image 3"
               class="grow-img">
-            <img src="assets/images/Capture.PNG" data-aos="fade-down-right" data-aos-duration="1000" alt="Image 4"
+            <img src="assets/images/Capture.PNG"  alt="Image 4"
               class="receive-img">
           </div>
         </div>
          <div class="col-lg-6 grow-your-presence-mobile">
-      <img src="assets/images/right-bg.PNG" alt="Image Description" data-aos="fade-up" data-aos-duration="1000"
+      <img src="assets/images/right-bg.PNG" alt="Image Description" 
         class="img-fluid recharge-bill-right-img mt-3">
     </div>
       </div>
@@ -427,15 +428,15 @@
       <div class="images-section">
         <img src="assets/images/Image wrapper.png" alt="Background Image" class="bg-image">
         <img src="assets/images/pretty-florist-apron-working-with-flowers-while-dreamily-looking-camera-big-greenhouse-PhotoRoom 1.png"
-          data-aos="fade-down-left" data-aos-duration="1000" alt="Image 2" class="mobile-img">
-        <img src="assets/images/sec1-3.PNG" data-aos="fade-down-right" data-aos-duration="1000" alt="Image 3"
+           alt="Image 2" class="mobile-img">
+        <img src="assets/images/sec1-3.PNG"  alt="Image 3"
           class="grow-img">
-        <img src="assets/images/Capture.PNG" data-aos="fade-down-right" data-aos-duration="1000" alt="Image 4"
+        <img src="assets/images/Capture.PNG" alt="Image 4"
           class="receive-img">
       </div>
     </div>
     <div class="col-lg-6 grow-your-presence-mobile">
-      <img src="assets/images/right-bg.PNG" alt="Image Description" data-aos="fade-up" data-aos-duration="1000"
+      <img src="assets/images/right-bg.PNG" alt="Image Description" 
         class="img-fluid recharge-bill-right-img mt-3">
     </div>
   </div>
@@ -447,8 +448,7 @@
 
 
 
-
-    <!-- Slick Slider CSS -->
+ 
 
 
     <section class="payment-solution ">
@@ -1003,9 +1003,15 @@
 
 
      <div id="preloader">
-        <img src="assets/images/loader.gif" alt="Loader Image"> </div>
+        <img src="assets/images/loader.gif" alt="Loader Image"> 
+    </div>
+
       <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
           class="fa-solid fa-arrow-up"></i></a>
+
+
+
+
 
       <!-- jQuery  -->
       <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -1052,10 +1058,6 @@
       <script>
         AOS.init(); 
       </script>
-
-
-
-
 
 </body>
 
