--- a/index.html
+++ b/index.html
@@ -1037,8 +1037,8 @@
       <script src="./assets/js/wow.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
 
-      <!-- GSAP (for loading page) -->
-      <script src="https://unpkg.co/gsap@3/dist/gsap.min.js"></script>
+      <!-- GSAP (for loading page) 
+      <script src="https://unpkg.co/gsap@3/dist/gsap.min.js"></script> -->
 
       <!-- FancyBox (for image or video popup) -->
       <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
