--- a/Mnews.html
+++ b/Mnews.html
@@ -358,7 +358,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
         </div>
         <div class="author-details-icon" data-aos="fade-up" data-aos-duration="1000">
           <a href="your_link_here">
-            <i class="fa-solid fa-angle-right arrow-right-news"></i>
+            <i class="fa-solid fa-angle-left arrow-right-news"></i>
         </a>        
         </div>
       </div>
