--- a/index.html
+++ b/index.html
@@ -296,10 +296,17 @@
         <div class="col-lg-6">
           <!-- Slide 1 Content -->
           <div class="recharge-bill-left">
-            <h2 data-aos="fade-up" data-aos-duration="1000">Recharge & Bill Payments</h2>
+            <h2 data-aos="fade-up" data-aos-duration="1000">Recharge & Bill Payments Recharge & Bill PaymentsRecharge & Bill Payments  & Bill PaymentsRecharge & Bill Payments Recharge & Bill Payments Recharge & Bill PaymentsRecharge & Bill Payments  & Bill PaymentsRecharge & Bill Payments</h2>
             <p data-aos="fade-up" data-aos-duration="1000">We Make <span>Secure, Seamless & Frictionless
-                Payments</span> An Everyday Convenience.</p>
+                Payments</span> An Everyday Convenience. We Make <span>Secure, Seamless & Frictionless
+                  Payments</span> An Everyday Convenience. We Make <span>Secure, Seamless & Frictionless
+                    Payments</span> An Everyday Convenience.  height: 65px;
+                    text-overflow: ellipsis;
+                    overflow: hidden;</p>
             <p class="recharge-bill-paragraph" data-aos="fade-up" data-aos-duration="1000">We help businesses grow
+              their brands and attract more customers while <br> empower individuals to lead a hassle-free,
+              time-saving and limitless state-of- <br>living through a wide range of financial platforms, products &
+              services. We help businesses grow
               their brands and attract more customers while <br> empower individuals to lead a hassle-free,
               time-saving and limitless state-of- <br>living through a wide range of financial platforms, products &
               services.</p>
