--- a/index.html
+++ b/index.html
@@ -304,17 +304,24 @@
             <div class=" recharge-bill-left-subtitle" data-aos="fade-up" data-aos-duration="1000">
               <p>We Make <span>Secure, Seamless & Frictionless
                 Payments</span> An Everyday Convenience. We Make <span>Secure, Seamless & Frictionless
-                  Payments</span> An Everyday Convenience.</p>
+                  Payments</span> An Everyday Convenience. We Make <span>Secure, Seamless & Frictionless
+                    Payments</span> An Everyday Convenience. We Make <span>Secure, Seamless & Frictionless
+                      Payments</span> An Everyday Convenience.</p>
           </div>
             
             <div class="recharge-bill-paragraph" data-aos="fade-up" data-aos-duration="1000">
-            <p >We help businesses grow
-              their brands and attract more customers while <br> empower individuals to lead a hassle-free,
-              time-saving and limitless state-of- <br>living through a wide range of financial platforms, products &
-              services. We help businesses grow
-              their brands and attract more customers while <br> empower individuals to lead a hassle-free,
-              time-saving and limitless state-of- <br>living through a wide range of financial platforms, products &
-              services.</p>
+            <p >living through a wide range of financial platforms, products &
+              services. living through a wide range of financial platforms, products &living through a wide range of financial platforms, products &</p>
+              services.living through a wide range of financial platforms, products &living through a wide range of financial platforms, products &</p>
+              <p>services.</p>
+            <p>services.</p>
+              <p>services.</p>
+              <p>services.</p>
+              <p>services.</p>
+              <p>services.</p>
+              <p>services.</p>
+              <p>services.</p>
+              
             </div>
             <div class="btn-group mt-5" data-aos="fade-up" data-aos-duration="1000">
               <div class="btn-wrapper">
