--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 
 <div class="container-fluid p-100">
   <!-- Slider Container -->
-  <div class="recharge-bill bill-payment-slider ">
+  <div class="recharge-bill bill-payment-slider  " >
     <!-- Slide 1 -->
     <div>
       <div class="row">
@@ -300,7 +300,6 @@
             <div class=" recharge-bill-left-title" data-aos="fade-up" data-aos-duration="1000">
             <h2 >Recharge & Bill Payments Recharge & Bill PaymentsRecharge & Bill Payments  & Bill PaymentsRecharge & Bill Payments Recharge & Bill Payments Recharge & Bill PaymentsRecharge & Bill Payments  & Bill PaymentsRecharge & Bill Payments</h2>
           </div>
-         
             <div class=" recharge-bill-left-subtitle" data-aos="fade-up" data-aos-duration="1000">
               <p>We Make <span>Secure, Seamless & Frictionless
                 Payments</span> An Everyday Convenience. We Make <span>Secure, Seamless & Frictionless
@@ -421,10 +420,10 @@
         <h2 data-aos="fade-up" data-aos-duration="1000">Recharge & Bill Payments</h2>
         <p data-aos="fade-up" data-aos-duration="1000">We Make <span>Secure, Seamless & Frictionless
             Payments <br></span> An Everyday Convenience.</p>
-        <p class="recharge-bill-paragraph" data-aos="fade-up" data-aos-duration="1000">We help businesses grow
-          their brands and attract more customers while <br> empower individuals to lead a hassle-free,
-          time-saving and limitless state-of- <br>living through a wide range of financial platforms, products &
-          services.</p>
+        <p class="recharge-bill-paragraph" data-aos="fade-up" data-aos-duration="1000">We help businesses grow their brands and attract more customers while 
+          empower individuals to lead a hassle-free, time saving and limitless state-of-
+          living through wide range of financial platforms, products & services.
+          </p>
         <div class="btn-group mt-5" data-aos="fade-up" data-aos-duration="1000">
           <div class="btn-wrapper">
             <button type="button" class="btn become-partner">Become A Partner</button>
