--- a/index.html
+++ b/index.html
@@ -309,9 +309,8 @@
           </div>
             
             <div class="recharge-bill-paragraph" data-aos="fade-up" data-aos-duration="1000">
-            <p >living through a wide range of financial platforms, products &
-              services. living through a wide range of financial platforms, products &living through a wide range of financial platforms, products &</p>
-              services.living through a wide range of financial platforms, products &living through a wide range of financial platforms, products &</p>
+            <p >living through a wide range of financial platforms, products &services. living through a wide range of financial platforms, products &living through a wide range of financial platforms, products &</p>
+              <p> living through a wide range of financial platforms, products &services. l living through a wide range of financial platforms, products &services. lservices.living through a wide range of financial platforms, products &living through a wide range of financial platforms, products &</p>
               <p>services.</p>
             <p>services.</p>
               <p>services.</p>
