--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"  >
 
 <head>
 
@@ -20,7 +20,7 @@
   <!-- Font Stylesheets -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
+  <linkhttps://www.youtube.com/watch?v=XSmTspUgEsE&list=PLxRKoQzM5m3K3OFcL4zUtpUgq8cMMceNO&index=5&pp=iAQB
     href="https://fonts.googleapis.com/css2?family=Almarai:wght@300;400;700;800&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
     rel="stylesheet">
 
@@ -751,6 +751,45 @@
             </div>
           </div>
         </div>
+
+          <!-- mobile only -->
+          <div class="col-md-6 pl-130 animation-mobile-only">
+            <div class="main-image-mobile mb-4 ">
+              <img src="assets/images/mobile.png"  data-aos="fade-up" data-aos-duration="1000"  class="large-image-mobile" alt="">
+              <div class="small-image-container">
+                <div class="row ">
+                  <div class="col-3" data-aos="fade-right" data-aos-duration="400">
+                    <img src="assets/images/green ball.png" class=" first-img-mobile " style="width: 55px; height: 55px;"
+                      ;alt="Small Image 1">
+                  </div>
+  
+                  <div class="col-3" data-aos="fade-left" data-aos-duration="350" data-aos-delay="100">
+                    <img src="assets/images/ball-y.png " class=" second-img-mobile mt-4" style="width: 50px; height: 50px; "
+                      alt="Small Image 2">
+                  </div>
+                </div>
+  
+                <div class="row mt-3">
+                  <div class="col-3" data-aos="fade-right" data-aos-duration="300" data-aos-delay="250">
+                    <img src="assets/images/ball-y.png" class=" third-img-mobile mb-2 " style="width: 50px; height: 50px;"
+                      alt="Small Image 3">
+                  </div>
+                </div>
+  
+                <div class="row mt-3">
+                  <div class="col-3" data-aos="fade-left" data-aos-duration="300">
+                    <img src="assets/images/white-ball.png" class=" fourth-img-mobile mb-2" style="width: 55px; height: 55px;"
+                      alt="Small Image 4">
+                  </div>
+                </div>
+                <div class="col-3 fifth-img-mobile" data-aos="fade-right" data-aos-duration="400">
+                  <img src="assets/images/paper fly.png" class="" style="width: 55px; height: 55px;"
+                    alt="Small Image 4">
+                </div>
+              </div>
+            </div>
+          </div>
+
 
         <div class="col-md-6 one-app-payments ">
           <div class="d-flex align-items-center ">
